Add a few config files for firebase

--- a/lib/style.scss
+++ b/lib/style.scss
@@ -8,3 +8,8 @@ body {
 .hello-world {
   font-family: $ridiculous;
 }
+
+#new-message--content {
+  height: 100px;
+  border: 1px dotted aliceblue;
+}
