--- a/lib/styles/variables.scss
+++ b/lib/styles/variables.scss
@@ -19,7 +19,7 @@ $down-icon: url(/public/img/down-arrow.svg) no-repeat;
   background-color: $color-main;
   width: 100%;
   font-family: $font-main;
-  height: 10vh;
+  // height: 10vh;
   color: white;
 }
 
