--- a/lib/styles/MessageInputStyles.scss
+++ b/lib/styles/MessageInputStyles.scss
@@ -16,7 +16,7 @@
   margin-right: 1%;
 }
 
-.MessageInput {
+.InputBlocks {
   @include flex;
   justify-content: space-around;
   align-items: center;
@@ -30,6 +30,13 @@
   @include border-radius($message-input-border-radius);
   height: 60%;
   width: 60%;
+  border: none;
+}
+
+.filter-input-field {
+  @include border-radius($message-input-border-radius);
+  height: 60%;
+  width: 20%;
   border: none;
 }
 
