--- a/lib/styles/style.scss
+++ b/lib/styles/style.scss
@@ -3,11 +3,12 @@
 @import 'UserListStyles';
 @import 'MessageListStyles';
 @import 'MessageInputStyles';
+@import 'HeaderStyles';
 @import 'reset';
 @import url(https://fonts.googleapis.com/css?family=Fira+Sans);
 
 #application {
-  
+
 }
 
 body {
