--- a/lib/styles/variables.scss
+++ b/lib/styles/variables.scss
@@ -1,4 +1,5 @@
 $submit-button-color: #27AE60;
 $clear-button-color: #E74C3C;
+$sort-button-color: #3498db;
 $message-input-border-radius: 5px;
 $font: 'Fira Sans', sans-serif;
