adds font size for inputs and buttons and gray background

--- a/lib/styles/HeaderStyles.scss
+++ b/lib/styles/HeaderStyles.scss
@@ -6,6 +6,8 @@
   height: 60%;
   width: 44%;
   border: none;
+  font-size: 1em;
+  background-color: $input-background-color;
 }
 
 .sort-button {
