--- a/lib/styles/MessageInputStyles.scss
+++ b/lib/styles/MessageInputStyles.scss
@@ -31,6 +31,8 @@
   height: 60%;
   width: 60%;
   border: none;
+  font-size: 1em;
+  background-color: $input-background-color;
 }
 
 .submit-button {
