ads colors and line heights and things

--- a/lib/styles/MessageInputStyles.scss
+++ b/lib/styles/MessageInputStyles.scss
@@ -42,3 +42,13 @@
 .clear-button {
   @include message-input-button($clear-button-color);
 }
+
+.time-stamp {
+  color: #9b59b6;
+  padding-right: 10px;
+}
+
+.first-name {
+  color: $sort-button-color;
+  font-weight: bold;
+}
