--- a/lib/styles/UserListStyles.scss
+++ b/lib/styles/UserListStyles.scss
@@ -8,12 +8,15 @@
   background-color: #ecf0f1;
   list-style-type: none;
   width: 30vw;
+  padding: 8px;
+  line-height: 2.3;
 }
 
 .user-list-title {
   font-weight: bold;
   text-align: center;
   width: 100%;
-  margin-top: 10%;
-  margin-bottom: 10%;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  text-align: left;
 }
