not sure what is happening with mobile chrome tools vs browser

--- a/lib/styles/mediaQueries.scss
+++ b/lib/styles/mediaQueries.scss
@@ -1,3 +1,6 @@
+/* ----------- iPhone 5 and 5S ----------- */
+
+/* Portrait and Landscape */
 @media only screen
   and (min-device-width: 320px)
   and (max-device-width: 568px) {
