--- a/lib/styles/MessageListStyles.scss
+++ b/lib/styles/MessageListStyles.scss
@@ -18,7 +18,15 @@
   z-index: -1;
 }
 
-
 ::-webkit-scrollbar {
     display: none;
+}
+
+.short-date {
+  display: none;
+  color: #9b59b6;
+}
+.long-date {
+  display: flex;
+  color: #9b59b6;
 }
