sets up firebase correctly

--- a/lib/style.scss
+++ b/lib/style.scss
@@ -13,3 +13,11 @@ body {
   height: 100px;
   border: 1px dotted aliceblue;
 }
+
+
+// colors
+// mixins
+// react-addons-test-utilsapp-temp
+// buttons
+// input-fields
+// typography
