--- a/lib/variables.scss
+++ b/lib/variables.scss
@@ -1,13 +1,13 @@
-
-// variables
 $ridiculous: cursive;
-$headerbar:#34495E;
-$sortbutton:#56A2D6;
-$usersbackground:#ECF0F1;
-$messagetimestamp:#BA94C7;
-$messagesender:#609CC0;
-$loggedinasbackground:#95A5A5;
-$inputbackground:#D8D8D8;
-$countercolor:#8D98A2;
-$submitloginbutton:#2CCD70;
+$headerBar:#34495E;
+$sortButton:#56A2D6;
+$filterAndMessageInputBackground:#D8D8D8;
+
+$usersBackground:#ECF0F1;
+$messageTimeStamp:#BA94C7;
+$messageSender:#609CC0;
+
+$loggedInBarBackground:#95A5A5;
+$counterColor:#8D98A2;
+$submitAndLoginButton:#2CCD70;
 $clearbutton:#E74D3C;
