--- a/lib/style.scss
+++ b/lib/style.scss
@@ -6,6 +6,10 @@ body {
   font-size: 18px;
 }
 
+.Application {
+  width: 100vw;
+}
+
 .LoginStatus {
   background-color: $dark-gray;
   color: $white;
@@ -21,12 +25,24 @@ body {
   color: $white;
 }
 
+.message-field {
+  width: 70vw;
+  display: inline-block;
+}
+
 .single-message{
   margin: 30px;
 }
 
 .timestamp {
   margin: 10px;
+}
+
+.user-list {
+  background-color: $light-gray;
+  width: 30vw;
+  display: inline-block;
+  height: 100%;
 }
 
 
