--- a/lib/style.scss
+++ b/lib/style.scss
@@ -21,6 +21,16 @@
   padding: 5px;
 }
 
+header {
+  background-color: $headerBar;
+}
+
+.title {
+  display: inline-block;
+  padding: 0 25px;
+  color: white; 
+ }
+
 .SubmitButton {
   margin: 5px;
 }
