adds title bar styling

--- a/lib/style.scss
+++ b/lib/style.scss
@@ -21,15 +21,14 @@
   padding: 5px;
 }
 
-header {
+.header {
   background-color: $headerBar;
 }
-
-.title {
+.title{
   display: inline-block;
   padding: 0 25px;
-  color: white; 
- }
+  color: white;
+}
 
 .SubmitButton {
   margin: 5px;
