--- a/lib/variables.scss
+++ b/lib/variables.scss
@@ -2,4 +2,5 @@
 $standard-font: 'Fira Sans', sans-serif;
 
 //colors
-$header-blue-background: #2c3e50;
+$deep-blue: #2c3e50;
+$light-gray: #bdc3c7;
