solved problem w displaying messages

--- a/lib/header.scss
+++ b/lib/header.scss
@@ -7,7 +7,9 @@ header {
   background-color: $deep-blue;
   display: flex;
   height: 40px;
+  margin: 0 auto;
   position: relative;
+  width: 960px;
 
   #page-main-title {
     color: white;
