--- a/lib/body.scss
+++ b/lib/body.scss
@@ -1,15 +1,25 @@
 @import "variables.scss";
 @import "mixins.scss";
 
+.body {
+  margin: 0 auto;
+  width: 960px;
+}
+
 .each-message-card {
-  display: inline-block;
+  
 }
 
 .message-output-container {
   display: inline-block;
   height: 2000px;
   overflow: auto;
-  width: 300px;
+  width: 70%;
+
+
+  ul {
+    padding: 0;
+  }
 
   li {
     list-style-type: none;
@@ -22,4 +32,5 @@
   display: inline-block;
   float: right;
   height: 2000px;
+  width: 30%;
 }
