--- a/lib/header.scss
+++ b/lib/header.scss
@@ -15,6 +15,7 @@ header {
     color: white;
     display: inline-block;
     font-size: $standard-font-size-header;
+    margin-left: 10px;
     width: 100px;
   }
 
