adds styles to the top nav bar

--- a/lib/variables.scss
+++ b/lib/variables.scss
@@ -1,13 +1,13 @@
-$ridiculous: cursive;
-$headerBar:#34495E;
-$sortButton:#56A2D6;
-$filterAndMessageInputBackground:#D8D8D8;
+$primary-font: 'Fira Sans', sans-serif;
+$headerBarAndMsgText: #34495E;
+$sortButton: #56A2D6;
+$filterAndMessageInputBackground: #D8D8D8;
 
-$usersBackground:#ECF0F1;
-$messageTimeStamp:#BA94C7;
-$messageSender:#609CC0;
+$usersBackground: #ECF0F1;
+$messageTimeStamp: #BA94C7;
+$messageSender: #35749C;
 
-$loggedInBarBackground:#95A5A5;
-$counterColor:#8D98A2;
-$submitAndLoginButton:#2CCD70;
-$clearbutton:#E74D3C;
+$loggedInBarBackground: #95A5A5;
+$counterColor: #8D98A2;
+$submitAndLoginButton: #2CCD70;
+$clearButton: #E74D3C;
