--- a/lib/style.scss
+++ b/lib/style.scss
@@ -1,9 +1,56 @@
 @import "variables";
 
+body {
+  font-family: $primary-font;
+  color: $headerBarAndMsgText;
+}
+
+.filter-bar {
+  height: 20px;
+  background-color: $filterAndMessageInputBackground;
+  border-radius: 5px;
+}
+
+::-webkit-input-placeholder {
+  color: $headerBarAndMsgText;
+  font-size: 14px;
+}
+
+.up-down-button {
+  float: right;
+}
+
+// .sort-newest-user {
+// }
+//
+// .sort-oldest-user {
+//   margin: 15px 5px 15px;
+//
+// }
+.sort-newest-user, .sort-oldest-user {
+  height: 30px;
+  margin: 15px 10px 15px 0;
+
+  border-radius: 5px;
+  background-color: $sortButton;
+  border: none;
+  padding: 6px 10px 4px 10px;
+  text-decoration: none;
+  color: white;
+  cursor: pointer;
+  outline: 0;
+  box-shadow: none;
+  -webkit-box-shadow: none;
+}
 
 
-.hello-world {
-  font-family: $ridiculous;
+.user-name-on-message {
+  color: $messageSender;
+  margin-left: 10px;
+}
+
+.time-stamp {
+  color: $messageTimeStamp;
 }
 
 #new-message--content {
@@ -22,7 +69,7 @@
 }
 
 .header {
-  background-color: $headerBar;
+  background-color: $headerBarAndMsgText;
 }
 .title{
   display: inline-block;
