message user name is now styling in blue

--- a/lib/body.scss
+++ b/lib/body.scss
@@ -19,6 +19,10 @@
       color: $light-purple;
     }
 
+    .each-message-user-name {
+      color: $light-blue;
+    }
+
     ul {
       padding: 0;
     }
