each message body is now formatted

--- a/lib/body.scss
+++ b/lib/body.scss
@@ -23,6 +23,10 @@
       color: $light-blue;
     }
 
+    .each-message-body-text {
+      font-size: $message-text-font-size;
+    }
+
     ul {
       padding: 0;
     }
