--- a/lib/variables.scss
+++ b/lib/variables.scss
@@ -1,6 +1,7 @@
 //text and fonts
 $standard-font: 'Fira Sans', sans-serif;
 $standard-font-size-header: 20px;
+$message-text-font-size: 18px;
 
 //colors
 $deep-blue: #2c3e50;
