--- a/lib/header.scss
+++ b/lib/header.scss
@@ -9,7 +9,7 @@ header {
   height: 40px;
   margin: 0 auto;
   position: relative;
-  width: 960px;
+  width: $standard-element-width;
 
   #page-main-title {
     color: white;
