--- a/lib/variables.scss
+++ b/lib/variables.scss
@@ -8,3 +8,6 @@ $deep-blue: #2c3e50;
 $light-blue: #3498db;
 $light-gray: #bdc3c7;
 $light-purple: #9b59b6;
+
+//dimensions
+$standard-element-width: 960px;
