--- a/lib/variables.scss
+++ b/lib/variables.scss
@@ -4,6 +4,7 @@ $standard-font-size-header: 20px;
 $message-text-font-size: 18px;
 
 //colors
+$dark-gray: #7f8c8d;
 $deep-blue: #2c3e50;
 $light-blue: #3498db;
 $light-gray: #bdc3c7;
