footer top component is formatted

--- a/lib/footer.scss
+++ b/lib/footer.scss
@@ -12,4 +12,14 @@ footer {
     height: 40px;
   }
 
+  .logged-in-as {
+    color: white;
+    font-size: $message-text-font-size;
+    margin-left: 10px;
+  }
+
+  .footer-bottom-component {
+    
+  }
+
 } //end of footer
