message box is formatted

--- a/lib/header.scss
+++ b/lib/header.scss
@@ -20,15 +20,7 @@ header {
   }
 
   #filter-input-field {
-    background-color: $light-gray;
-    border-radius: 5px;
-    border: none;
-    color: $deep-blue;
-    font-size: $standard-font-size-header;
-    height: 40px;
-    margin-left: 20px;
-    margin-right: 40px;
-    width: 40%;
+    @include input-field;
   }
 
   .buttons-container {
