--- a/lib/variables.scss
+++ b/lib/variables.scss
@@ -6,9 +6,11 @@ $message-text-font-size: 18px;
 //colors
 $dark-gray: #7f8c8d;
 $deep-blue: #2c3e50;
+$green: #2ecc71;
 $light-blue: #3498db;
 $light-gray: #bdc3c7;
 $light-purple: #9b59b6;
+$red: #c0392b;
 
 //dimensions
 $standard-element-width: 960px;
