formats h2 saying Users Present in the Chat Room

--- a/lib/body.scss
+++ b/lib/body.scss
@@ -43,6 +43,12 @@
     float: right;
     height: 2000px;
     width: 30%;
-  }
+
+    h2 {
+      color: $deep-blue;
+      margin-left: 10px;
+    }
+
+  } //end of user-info-container
 
 } //end of body
