--- a/lib/style.scss
+++ b/lib/style.scss
@@ -8,3 +8,20 @@
 html {
   font-family: $standard-font;
 }
+
+//styles for placeholders in input fields
+//from http://codepen.io/htmlcolorcodes/pen/xwKaNj
+::-webkit-input-placeholder { /* Chrome */
+  color: $deep-blue;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: $deep-blue;
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: $deep-blue;
+  opacity: 1;
+}
+:-moz-placeholder { /* Firefox 4 - 18 */
+  color: $deep-blue;
+  opacity: 1;
+}
