--- a/lib/mixins.scss
+++ b/lib/mixins.scss
@@ -10,6 +10,7 @@
   border: none;
   border-radius: 5px;
   color: white;
+  cursor: pointer;
   font-size: $standard-font-size-header;
   height: 40px;
   margin: 0 5px;
@@ -24,5 +25,6 @@
   height: 40px;
   margin-left: 20px;
   margin-right: 40px;
+  padding: 0 10px;
   width: 40%;
 }
