--- a/lib/header.scss
+++ b/lib/header.scss
@@ -31,6 +31,11 @@ header {
 
   .sort-up-button, .sort-down-button {
     @include button-standard;
+
+    &:hover{
+      @include button-standard-hover;
+    }
+
   }
 
 } //end of header
