--- a/lib/header.scss
+++ b/lib/header.scss
@@ -36,6 +36,6 @@ header {
       @include button-standard-hover;
     }
 
-  }
+  } //end of sort-up-button and sort-down-button
 
 } //end of header
