--- a/lib/variables.scss
+++ b/lib/variables.scss
@@ -1,4 +1,5 @@
 //text and fonts
+$mobile-font-size-header: 14px;
 $standard-font: 'Fira Sans', sans-serif;
 $standard-font-size-header: 20px;
 $message-text-font-size: 18px;
