header is formatted for now

--- a/lib/header.scss
+++ b/lib/header.scss
@@ -44,7 +44,7 @@ header {
 
   header {
     display: block;
-    height: auto;
+    height: 25vh;
     margin: 0;
     padding: 0;
     text-align: center;
