centers mssgs within window

--- a/lib/body.scss
+++ b/lib/body.scss
@@ -68,6 +68,11 @@
       display: none;
     }
 
+    .message-output-container {
+      text-align: center;
+      width: 100vw;
+    }
+
   } //end of body
 
 } //end of media query
