--- a/lib/body.scss
+++ b/lib/body.scss
@@ -73,6 +73,10 @@
       width: 100vw;
     }
 
+    .each-message-card {
+      text-align: left;
+    }
+
   } //end of body
 
 } //end of media query
