--- a/lib/body.scss
+++ b/lib/body.scss
@@ -48,6 +48,7 @@
 
     .users-present-button {
       @include button-standard;
+      margin: 20px auto;
 
       &:hover{
         @include button-standard-hover;
