--- a/lib/header.scss
+++ b/lib/header.scss
@@ -46,7 +46,7 @@ header {
     display: block;
     height: 25vh;
     margin: 0;
-    padding: 0;
+    padding: 5px;
     text-align: center;
     width: 100vw;
 
