put login button down into second part of footer

--- a/lib/footer.scss
+++ b/lib/footer.scss
@@ -111,7 +111,7 @@ footer {
     }
 
     .submit-message-button, .clear-message-button {
-      display: inline-block;
+      // display: inline-block;
       margin-bottom: 15px;
     }
 
