--- a/lib/variables.scss
+++ b/lib/variables.scss
@@ -11,3 +11,8 @@ $medium-blue: #2980b9;  //username
 $red: #d35400; //logged in status, clear button
 $dark-gray: #95a5a6; //logged-in bar
 $white: #fff;
+
+$color-header-footer-bar: $dark-blue;
+$color-submit-btn: $green;
+$color-clear-btn: $red;
+$color-input-text: $dark-blue;
