--- a/lib/style.scss
+++ b/lib/style.scss
@@ -1,151 +1,178 @@
 @import 'reset.scss';
 @import 'variables.scss';
 
-body {
+* {
   font-family: $main-text-family;
   font-size: 18px;
 }
 
-.Application {
-  width: 100vw;
-}
+// .Application {
+//   width: 100vw;
+// }
 
-.LoginStatus {
-  background-color: $dark-gray;
-  color: $white;
+.input-bar, .filter-bar {
+  background-color: $color-header-footer-bar;
   height: 53px;
-  font-size: 20px;
-  padding-left: 10px;
-  padding-top: 28px;
-  font-weight: 200;
 }
 
-.LogIn-btn {
-  background-color: $green;
+.submit-btn, .clear-btn{
+  position: relative;
   color: $white;
-}
-
-.message-field {
-  width: 70vw;
-  display: inline-block;
-}
-
-.single-message{
-  margin: 30px;
-}
-
-.timestamp {
+  border-radius: 5px;
+  border: none;
+  outline: none;
+  height: 30px;
+  width: 80px;
+  float: right;
   margin: 10px;
-}
-
-.user-list {
-  background-color: $light-gray;
-  width: 30vw;
-  display: inline-block;
-  height: 100%;
-}
-
-
-.submit-btn {
-
-  position: relative;
-  background-color: $green;
-  color: $white;
-  height: 30px;
-  width: 80px;
-  border-radius: 5px;
-  border: none;
-  left: 65px;
-  top: 10px;
-  font-size: 16px;
-  outline: none;
-  &:hover {
-    color: $green;
-    background-color: $white;
-  }
-  &:disabled {
-    background-color: $light-gray;
-    color: $white;
-  }
-}
-
-
-
-.clear-btn {
-  position: relative;
-  background-color: $red;
-  color: white;
-  font-size: 16px;
-  height: 30px;
-  width: 80px;
-  border-radius: 5px;
-  border: none;
-  top: 10px;
-  left: 80px;
-  outline: none;
-  &:hover {
-      color: $red;
-      background-color: $white;
-    }
     &:disabled {
       background-color: $light-gray;
       color: $white;
     }
-}
+  }
 
-.user-display {
-  font-weight: bold;
-}
+.submit-btn{
+  background-color: $color-submit-btn;
+  &:hover {
+    color: $green;
+    background-color: $white;
+    }
+  }
 
-.input-bar {
-  background-color: $dark-blue;
-  height: 53px;
-  position: relative;
-}
+.clear-btn{
+  background-color: $color-clear-btn;
+    &:hover {
+      color: $red;
+      background-color: $white;
+    }
+  }
 
-#message-input {
-  position: relative;
-  background-color: $light-gray;
-  color: $dark-blue;
-  height: 30px;
-  width: 60vw;
-  border-radius: 5px;
-  left: 10px;
-  top: 10px;
-  border: none;
-  font-size: 16px;
-  padding-left: 15px;
-}
+  .character-count {
+    color: $white;
+    margin: 30px;
+  }
 
-.timestamp {
-  color: $purple;
-}
+  #message-input, #filter-input{
+    background-color: $light-gray;
+    color: $color-input-text;
+    height: 30px;
+    width: 80vw;
+    border-radius: 5px;
+    border: none;
+    margin: 10px;
+  }
 
-.username {
-  color: $medium-blue;
-  font-weight: bold;
-}
 
-.message-content {
-  color: $dark-blue;
-  margin-left: 10px;
-}
+// .LoginStatus {
+//   background-color: $dark-gray;
+//   color: $white;
+//   height: 53px;
+//   font-size: 20px;
+//   padding-left: 10px;
+//   padding-top: 28px;
+//   font-weight: 200;
+// }
+//
+// .LogIn-btn {
+//   background-color: $green;
+//   color: $white;
+// }
+//
+// .message-field {
+//   width: 70vw;
+//   display: inline-block;
+// }
+//
+// .single-message{
+//   margin: 30px;
+// }
+//
+// .timestamp {
+//   margin: 10px;
+// }
+//
+// .user-list {
+//   background-color: $light-gray;
+//   width: 30vw;
+//   display: inline-block;
+//   height: 100vh;
+//   float: right;
+// }
+//
+//
+//
+//
+//
+//
+// .user-display {
+//   font-weight: bold;
+// }
+//
+// .title{
+//   color: $white;
+//   padding: 20px;
+// }
+//
+// .input-bar {
+//   background-color: $dark-blue;
+//   height: 53px;
+//   position: relative;
+// }
+// .filter-bar {
+//   background-color: $dark-blue;
+//   height: 53px;
+//   position: relative;
+// }
+//
+// #filter-input {
+//   position: relative;
+//   background-color: $light-gray;
+//   color: $dark-blue;
+//   height: 30px;
+//   width: 60vw;
+//   border-radius: 5px;
+//   left: 10px;
+//   top: 10px;
+//   border: none;
+//   font-size: 16px;
+//   padding-left: 15px;
+// }
+//
 
-::-webkit-input-placeholder {
-  color: $dark-blue;
-  font-size: 16px;
-
-}
-
-.character-count {
-  color: $white;
-  font-family: $main-text-family;
-  position: absolute;
-  left: 905px;
-  top: 18px;
-}
-
-#new-message--content {
-  height: 100px;
-  border: 1px dotted aliceblue;
-}
+//
+// .timestamp {
+//   color: $purple;
+// }
+//
+// .username {
+//   color: $medium-blue;
+//   font-weight: bold;
+// }
+//
+// .message-content {
+//   color: $dark-blue;
+//   margin-left: 10px;
+// }
+//
+// ::-webkit-input-placeholder {
+//   color: $dark-blue;
+//   font-size: 16px;
+// }
+//
+// .character-count {
+//   color: $white;
+//   font-family: $main-text-family;
+//   position: absolute;
+//   left: 905px;
+//   top: 18px;
+// }
+//
+// #new-message--content {
+//   height: 100px;
+//   border: 1px dotted aliceblue;
+// }
+//
+// .message-field {
+//   display: inline-block;
+//   position: absolute;
+// }
